XSLT project for portfolio added

--- a/index.html
+++ b/index.html
@@ -47,8 +47,16 @@
   </div>
 
   <div class="child-element radiusOf10" style="border:1px solid blue">
-
-    <h2>to be filled</h2>
+	<span>
+		<span style="font-size: 24; color: rgba(1, 3, 0, 0.74)">XSLT</span>
+		<span>--</span>
+		<span style="color: rgba(21, 46, 8, 0.795); font-size: 20;">E-invoice visual design
+		</span>
+	</span>
+	<h4 style="margin-top: -3;">I've created an e-invoice visual from scratch using XML & XSLT </h4>
+	<div>
+		<a href="https://github.com/uygarucar/e-invoice-visual">Github link here </a>
+	</div>
     
   </div>
 
