New project added

--- a/index.html
+++ b/index.html
@@ -46,6 +46,24 @@
 
   </div>
 
+    <div class="child-element radiusOf10" style="border:1px solid green">
+      <span>
+        <span style="font-size: 24; color: rgba(1, 3, 0, 0.74)">React Native</span>
+        <span>--</span>
+        <span style="color: rgba(21, 46, 8, 0.795); font-size: 20;">German Word Endings</span>
+      </span>
+      <h4 style="margin-top: -3;">See word endings in German for different cases and genders</h4>
+      <div>
+        <p>Technologies used</p>
+        <p style="margin-top: -10;">React Redux, React Hooks, React Navigation, Firebase AdMob and some 3rd
+          party libraries </p>
+      </div>
+      <div>
+        <a href="https://github.com/uygarucar/german-word-endings/tree/master/germanWordEndings">Github link here</a>
+      </div>
+  
+    </div>
+
   <div class="child-element radiusOf10" style="border:1px solid blue">
 	<span>
 		<span style="font-size: 24; color: rgba(1, 3, 0, 0.74)">XSLT</span>
@@ -60,9 +78,5 @@
     
   </div>
 
-  <div class="child-element radiusOf10" style="border:1px solid green;">
-
-    <h2>to be filled</h2>
-
-  </div>
+  
 </div>
