New React Native Project

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <div class="flex-container parent-element">
 
-  <div class="child-element radiusOf10" style="border:1px solid red">
+  <div class="child-element radiusOf10" style="border:1px solid blue">
     <span>
       <span style="font-size: 24; color: rgba(1, 3, 0, 0.74)">React Native</span>
       <span>--</span>
@@ -46,7 +46,7 @@
 
   </div>
 
-    <div class="child-element radiusOf10" style="border:1px solid green">
+    <div class="child-element radiusOf10" style="border:1px solid blue">
       <span>
         <span style="font-size: 24; color: rgba(1, 3, 0, 0.74)">React Native</span>
         <span>--</span>
@@ -63,8 +63,24 @@
       </div>
   
     </div>
+    <div class="child-element radiusOf10" style="border:1px solid blue">
+      <span>
+        <span style="font-size: 24; color: rgba(1, 3, 0, 0.74)">React Native</span>
+        <span>--</span>
+        <span style="color: rgba(21, 46, 8, 0.795); font-size: 20;">Ne Nerede</span>
+      </span>
+      <h4 style="margin-top: -3;">A Game of Geography of Turkey for students studying Government Exam KPSS</h4>
+      <div>
+        <p>Technologies used</p>
+        <p style="margin-top: -10;">React Redux, React Hooks, React Navigation, Firebase AdMob, Firebase Authentication, Firebase RTDB, React Native Maps, Redux Saga and React Modal </p>
+      </div>
+      <div>
+        <a href="https://play.google.com/store/apps/details?id=com.curlingturkey">Play Store link here</a>
+      </div>
+  
+    </div>
 
-  <div class="child-element radiusOf10" style="border:1px solid blue">
+  <div class="child-element radiusOf10" style="border:1px solid red">
 	<span>
 		<span style="font-size: 24; color: rgba(1, 3, 0, 0.74)">XSLT</span>
 		<span>--</span>
