--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
       <div>
         <a href="https://github.com/uygarucar/german-word-endings/tree/master/germanWordEndings">Github link here</a>
       </div>
+      <div>
+        <a href="https://play.google.com/store/apps/details?id=com.germanwordendings">Play Store link here</a>
+      </div>
   
     </div>
     <div class="child-element radiusOf10" style="border:1px solid blue">
@@ -75,7 +78,7 @@
         <p style="margin-top: -10;">React Redux, React Hooks, React Navigation, Firebase AdMob, Firebase Authentication, Firebase RTDB, React Native Maps, Redux Saga and React Modal </p>
       </div>
       <div>
-        <a href="https://play.google.com/store/apps/details?id=com.curlingturkey">Play Store link here</a>
+        <a href="https://github.com/uygarucar/geocurling">Github link here</a>
       </div>
   
     </div>
